--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MartPlace | Homepage</title>
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <a href="#" class="header__logo">
+                        <img src="images/logo.png" alt="logo">
+                    </a>
+                    <a href="#" class="header__seller">Become a Seller</a>
+                    <ul class="header__notice-list">
+                        <li class="header__notice">
+                            <a href="#" class="lnr lnr-alarm"><span class="quantity">25</span></a>
+                        </li>
+                        <li class="header__notice">
+                            <a href="#" class="lnr lnr-envelope"><span class="quantity">6</span></a>
+                        </li>
+                        <li class="header__notice">
+                            <a href="#" class="lnr lnr-cart"><span class="quantity">2</span></a>
+                        </li>
+                    </ul>
+                    <div class="header__user">
+                        <a href="#" class="header__avatar">
+                            <span class="avatar" style="background-image: url(images/user_pic.png);"></span>
+                        </a>
+                        <div class="header__user-info">
+                            <a href="#" class="header__user-name">Taofiq Hakim</a>
+                            <a href="#" class="header__user-balance"><span>$</span>20.45</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="header__bottom">
+            <div class="container">
+                <div class="header__bottom-inner">
+                    <nav class="header__menu">
+                        <ul class="menu">
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">all products</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">wordpress </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">features </a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="#" class="menu__link">Pages</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <form class="header__search">
+                        <input class="header__search-input" type="search" name="search header"
+                            placeholder="Search product here...">
+                        <button type="submit" class="lnr lnr-magnifier"></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </header>
 
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
