added secton advantages and fix digital-proguct section

--- a/app/index.html
+++ b/app/index.html
@@ -96,22 +96,60 @@
                 <label class="search-input">
                     <input class="search__input" type="search" name="search" placeholder="Search your products...">
                 </label>
-                <select name="search list" class="search__list">
-                    <option selected class="search__item">All Categories</option>
-                    <option class="search__item">Plugins</option>
-                    <option class="search__item">WordPress</option>
-                    <option class="search__item">Site Template</option>
-                    <option class="search__item">PSD Template</option>
-                    <option class="search__item">Joomla</option>
-                    <option class="search__item">User Interface</option>
-                    <option class="search__item">Landing Page</option>
-                    <option class="search__item">Software</option>
-                </select>
+                <label>
+                    <select name="search list" class="search__list lnr lnr-chevron-down">
+                        <option selected class="search__item">All Categories</option>
+                        <option class="search__item">Plugins</option>
+                        <option class="search__item">WordPress</option>
+                        <option class="search__item">Site Template</option>
+                        <option class="search__item">PSD Template</option>
+                        <option class="search__item">Joomla</option>
+                        <option class="search__item">User Interface</option>
+                        <option class="search__item">Landing Page</option>
+                        <option class="search__item">Software</option>
+                    </select>
+                </label>
                 <button class="search__btn" type="submit">Search Now</button>
             </form>
         </section>
 
-        <section style="height: 400px; background-color: black;"></section>
+        <section class="advantages">
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <div class="advantages__wrapper-img">
+                        <img class="advantages__item-img" src="images/advanteges-1.png"></img>
+                    </div>
+                    <div class="advantages__item-title">Best UX Research</div>
+                    <div class="advantages__item-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                        justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__wrapper-img">
+                        <img class="advantages__item-img" src="images/advanteges-1.png"></img>
+                    </div>
+                    <div class="advantages__item-title">Fully Responsive</div>
+                    <div class="advantages__item-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                        justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__wrapper-img">
+                        <img class="advantages__item-img" src="images/advanteges-1.png"></img>
+                    </div>
+                    <div class="advantages__item-title">Buy & Sell Easily</div>
+                    <div class="advantages__item-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
+                        justo ut scelerisque
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
