--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -115,7 +117,7 @@
 
         <section class="advantages">
             <div class="advantages__items">
-                <div class="advantages__item">
+                <article class="advantages__item">
                     <div class="advantages__wrapper-img">
                         <img class="advantages__item-img" src="images/advanteges-1.png"></img>
                     </div>
@@ -125,10 +127,10 @@
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
                     </div>
-                </div>
-                <div class="advantages__item">
+                </article>
+                <article class="advantages__item">
                     <div class="advantages__wrapper-img">
-                        <img class="advantages__item-img" src="images/advanteges-1.png"></img>
+                        <img class="advantages__item-img" src="images/advanteges-2.png"></img>
                     </div>
                     <div class="advantages__item-title">Fully Responsive</div>
                     <div class="advantages__item-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
@@ -136,16 +138,90 @@
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
                     </div>
-                </div>
-                <div class="advantages__item">
+                </article>
+                <article class="advantages__item">
                     <div class="advantages__wrapper-img">
-                        <img class="advantages__item-img" src="images/advanteges-1.png"></img>
+                        <img class="advantages__item-img" src="images/advanteges-3.png"></img>
                     </div>
                     <div class="advantages__item-title">Buy & Sell Easily</div>
                     <div class="advantages__item-text">Nunc placerat mi id nisi interdum mollis. Praesent pharetra,
                         justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section class="weekly-products">
+            <div class="weekly-products__inner">
+                <div class="weekly-products__top">
+                    <div class="weekly-products__top-title">Weekly Featured Products</div>
+                    <div class="weekly-products__top-btns">
+                        <button type="button" class="swiper__button-prev lnr lnr-chevron-left"></button>
+                        <button type="button" class="swiper__button-next lnr lnr-chevron-right"></button>
+                    </div>
+
+                </div>
+                <div class="weekly-products__slider">
+                    <div class="swiper-container">
+                        <!-- Additional required wrapper -->
+                        <div class="swiper-wrapper">
+                            <!-- Slides -->
+                            <div class="swiper-slide">
+                                <img class="slide__img" src="images/product_slide.jpg" alt="slide profuct">
+
+                                <article class="slide__card card">
+                                    <a href="#" class="card__title">One Page Resume Template</a>
+                                    <div class="card__info">
+                                        <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                                        </span>
+                                        <a href="#" class="card__name-user">AazzTech</a>
+                                        <a href="#" class="card__category">WordPress</a>
+                                    </div>
+                                    <div class="card__text">
+                                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                                        scelerisque
+                                        the mattis, leo quam aliquet congue placerat mi id nisi interdum mollis.
+                                        Praesent
+                                        pharetra, justo ut scelerisque the mattis, leo quam aliquet congue justo ut
+                                        scelerisque.
+                                    </div>
+                                    <div class="card__tags">
+                                        <div class="card__tag">website</div>
+                                        <div class="card__tag">plugin</div>
+                                        <div class="card__tag">landing page</div>
+                                    </div>
+                                    <div class="card__bottom">
+                                        <div class="card__price">$10 - $50</div>
+                                        <div class="card__like">
+                                            <div class="card__heart lnr lnr-heart"></div>
+                                            <div class="card__like-quantity">46</div>
+                                        </div>
+                                        <div class="card__cart">
+                                            <div class="card__cart-icon lnr lnr-cart"></div>
+                                            <div class="card__cart-quantity">634</div>
+                                        </div>
+                                        <div class="card__ratings ratings" data-total-value="0">
+                                            <div class="ratings__item" data-item-value="5"><i
+                                                    class="material-icons">star_rate</i></div>
+                                            <div class="ratings__item" data-item-value="4"><i
+                                                    class="material-icons">star_rate</i></div>
+                                            <div class="ratings__item" data-item-value="3"><i
+                                                    class="material-icons">star_rate</i></div>
+                                            <div class="ratings__item" data-item-value="2"><i
+                                                    class="material-icons">star_rate</i></div>
+                                            <div class="ratings__item" data-item-value="1"><i
+                                                    class="material-icons">star_rate</i></div>
+                                        </div>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+
+                        <!-- If we need navigation buttons -->
+
                     </div>
                 </div>
             </div>
@@ -157,6 +233,7 @@
 
     <script src=" https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
