--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
 
         <section class="advantages">
             <div class="advantages__items">
-                <article class="advantages__item">
+                <article class="advantages__item ">
                     <div class="advantages__wrapper-img">
                         <img class="advantages__item-img" src="images/advanteges-1.png"></img>
                     </div>
@@ -154,9 +154,9 @@
         </section>
 
         <section class="weekly-products">
-            <div class="weekly-products__inner">
-                <div class="weekly-products__top">
-                    <div class="weekly-products__top-title">Weekly Featured Products</div>
+            <div class="weekly-products__inner inner-wrap">
+                <div class="weekly-products__top top-wrap">
+                    <div class="weekly-products__top-title top-title">Weekly Featured Products</div>
                     <div class="weekly-products__top-btns">
                         <button type="button" class="swiper__button-prev lnr lnr-chevron-left"></button>
                         <button type="button" class="swiper__button-next lnr lnr-chevron-right"></button>
@@ -169,7 +169,8 @@
                         <div class="swiper-wrapper">
                             <!-- Slides -->
                             <div class="swiper-slide">
-                                <img class="slide__img" src="images/product_slide.jpg" alt="slide profuct">
+                                <a class="slide__img" style="background-image: url('images/card-img.jpg');"
+                                    alt="slide product"></a>
 
                                 <article class="slide__card card">
                                     <a href="#" class="card__title">One Page Resume Template</a>
@@ -215,6 +216,221 @@
                 </div>
             </div>
         </section>
+        <section class="realese-products">
+            <div class="realese-products__inner inner-wrap">
+                <div class="realese-products__top top-wrap">
+                    <div class="realese-products__top-title top-title">Newest Release Products</div>
+                    <div class="realese-products__top-filter">Filter by:
+                        <ul class="filter__list">
+                            <li class="filter__item"><a href="#" class="filter__links">Trending items</a></li>
+                            <li class="filter__item"><a href="#" class="filter__links">Best seller</a></li>
+                            <li class="filter__item"><a href="#" class="filter__links">Best rating</a></li>
+                            <li class="filter__item"><a href="#" class="filter__links">Low price</a></li>
+                            <li class="filter__item"><a href="#" class="filter__links">High price</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="realese-products__tags top-wrap">
+                    <button type="button" class="realese-products__tag" data-filter=".category-plugin">Plugins</button>
+                    <button type="button" class="realese-products__tag"
+                        data-filter=".category-wordpress">WordPress</button>
+                    <button type="button" class="realese-products__tag" data-filter=".category-html">Site
+                        Template</button>
+                    <button type="button" class="realese-products__tag" data-filter=".category-psd">PSD
+                        Template</button>
+                    <button type="button" class="realese-products__tag" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" class="realese-products__tag" data-filter=".category-ui">User
+                        Interface</button>
+                    <button type="button" class="realese-products__tag" data-filter=".category-landing">Landing
+                        Page</button>
+                    <button type="button" class="realese-products__tag"
+                        data-filter=".category-software">Software</button>
+                </div>
+                <div class="realese-products__cards">
+                    <article class="realese-products__card card category-plugin" data-order="1">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+
+                        <a href="#" class="card__title">E-commerce Shopping Cart</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">Theme-Valley</a>
+                            <a href="#" class="card__category">Plugin</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">90</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">246</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                    <article class="realese-products__card card category-psd" data-order="2">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+                        <a href="#" class="card__title">Marketify Coffee Shop</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">EchoTheme</a>
+                            <a href="#" class="card__category">PSD</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10 - $50</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">46</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">634</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                    <article class="realese-products__card card category-html" data-order="3">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+                        <a href="#" class="card__title">Bryson - Portfolio Template</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">Artcorner</a>
+                            <a href="#" class="card__category">HTML</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">56</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">68</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                    <article class="realese-products__card card category-plugin" data-order="4">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+                        <a href="#" class="card__title">E-commerce Shopping Cart</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">Design-Hub</a>
+                            <a href="#" class="card__category">Plugin</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10 - $50</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">90</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">45</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                    <article class="realese-products__card card category-psd" data-order="5">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+                        <a href="#" class="card__title">Marketify Coffee Shop</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">AazzTech</a>
+                            <a href="#" class="card__category">PSD</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10 - 50</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">48</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">50</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                    <article class="realese-products__card card category-html" data-order="6">
+                        <a class="card__picture" style="background-image: url('images/card-img.jpg');"
+                            alt="card product"></a>
+                        <a href="#" class="card__title">Bryson - Portfolio Template</a>
+                        <div class="card__info">
+                            <span class="card__img" style="background-image: url(images/user.jpg);">
+
+                            </span>
+                            <a href="#" class="card__name-user">Coder-Lab</a>
+                            <a href="#" class="card__category">HTML</a>
+                        </div>
+                        <div class="card__text">
+                            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                            the mattis, leo quam aliquet congue.
+                        </div>
+                        <div class="card__bottom">
+                            <div class="card__price">$10</div>
+                            <div class="card__like">
+                                <div class="card__heart lnr lnr-heart"></div>
+                                <div class="card__like-quantity">56</div>
+                            </div>
+                            <div class="card__cart">
+                                <div class="card__cart-icon lnr lnr-cart"></div>
+                                <div class="card__cart-quantity">49</div>
+                            </div>
+                        </div>
+
+
+                    </article>
+                </div>
+                <div class="realese-products__buttons">
+                    <button class="realese-products__btn" type="button" data-filter=".category-all">All New
+                        Items</button>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
